# wrist_rotation

./: Hand getsure Github.txt  README.md  SmartCombinedDetection.spec  SmartCombinedLITE.spec  TG25_HandTracking.spec  TG25_Launcher.py  TG25_Launcher.spec  build.bat  build_exe.bat  build_exe_fixed.bat  build_lite_optimized.bat  diagnose.py  final_test.py  main.py  probe_dai.py  probe_dai.spec  pyproject.toml  requirements.txt  requirements_exe.txt  result.txt  run_hand_tracking.py  run_hand_tracking.spec  sanity_open.py  sanity_rgb.py  setup_models.bat  smart_combined_fixed.spec  smart_combined_lite.py  smart_combined_standalone.py  test_import.py  wrist_rotation_v3.py
docs/: API.md  ARCHITECTURE_DIAGRAM.md  CHANGELOG.md  DIRECTORY_TREE.md  EXE_BUILD_FIX.md  EXE_BUILD_GUIDE.md  EXE_QUICK_REFERENCE.md  IMPLEMENTATION_GUIDE.md  INDEX.md  INSTALLATION.md  INTEGRATION_SUMMARY.md  MASTER_INDEX.md  QUICKSTART.md  TECHNICAL.md  application-architecture.md  implementation-tasks.md  troubleshooting.md  wrist_rotation.md  wrist_rotation_v3.md
scripts/: run_demo.py
src/gesture_oak/: __init__.py
src/gesture_oak/apps/: __init__.py  hand_tracking_app.py  motion_swipe_app.py  smart_combined_app.py  swipe_detection_app.py  three_area_app.py  wrist_rotation_app.py
src/gesture_oak/core/: oak_camera.py
src/gesture_oak/detection/: HandTracker.py  __init__.py  hand_detector.py  motion_detector.py  motion_swipe_detector.py  rgb_hand_detector.py  smart_combined_detector.py  swipe_detector.py  test_hand_data.py  three_area_detector.py  wrist_rotation_detector.py
(+2 files in other folders)
